--- a/computer.css
+++ b/computer.css
@@ -8,7 +8,7 @@
 
 body {
     background-color: #393939;
-    /*font-family: Verdana, Geneva, Arial, sans-serif;*/
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 0px;
     margin: 0px;
 }
@@ -60,6 +60,7 @@ color:#EEE9CC;
 
 .button:hover{
 box-shadow:5px 5px 3px black;
+background: radial-gradient(ellipse at center, #a88956 51%,#262113 100%);
 }
 
 section{
