--- a/phone.css
+++ b/phone.css
@@ -1,10 +1,125 @@
-body{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
+/*
+#395144 (darkest green)
+#4E6C50 (green)
+#81642c (brown)
+#EEE9CC (white)
+#393939 (black)
+*/
 
+body {
+    background-color: #393939;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size:x-large;
+    padding: 0%;
+    margin: 0%;
+    width:100%;
+}
 
 #wrapper{
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #EEE9CC;
     min-height: 100dvh;
 
+}
+
+header{
+    background-color: #395144;
+    color: #EEE9CC;
+    padding-top: 2%;
+    height:17%;
+    text-align: center;
+}
+
+footer{
+    background-color: #395144;
+    color: #EEE9CC;
+    padding-top: 2%;
+    bottom:0;
+    text-align: center;
+
+}
+
+h1, h2, h3, h5, h6, p, li {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+h4{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 2%;
+}
+
+.button{
+font-size:x-large;
+text-decoration:none;
+background-color:#81642c;
+display:inline-block;
+width:85vw;
+text-align:center;
+padding:2%;
+margin:2%;
+border-radius:15px;
+color:#EEE9CC;
+}
+
+.button:hover{
+box-shadow:5px 5px 3px black;
+background: radial-gradient(ellipse at center, #81642c 51%,#262113 100%);
+}
+
+section{
+    color:#393939;
+    text-align: center;
+}
+
+.sectionB{
+    color:#393939;
+    text-align: center;
+    margin-right: 5%;
+}
+
+textarea{
+    width:80%;
+}
+
+select{
+    width:80%;
+    padding:2.5%;
+}
+
+input{
+    width:90%;
+    padding: 2.5%;
+}
+
+input[type="checkbox"]{
+    transform: scale(1.5);
+    padding: 2.5%;
+    width:100%
+}
+
+input[type="reset"]{
+    font-size: large;
+    padding:2.5%;
+    margin:5%;
+}
+input[type="submit"]{
+    font-size: large;
+    padding:2.5%;
+    margin:5%;
+}
+
+aside{
+    display:inline-block;
+    text-align:center;
+    margin: 2%;
+    margin-bottom:1%;
+    margin-top:1%;
+    padding: 2%;
+    width: 92%;
+}
+img{
+    width:100%;
 }
