--- a/phone.css
+++ b/phone.css
@@ -7,12 +7,12 @@
 */
 
 body {
-    background-color: #393939;
+    background-color: #395144;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size:x-large;
     padding: 0%;
     margin: 0%;
-    width:100%;
+    width: 100%;
 }
 
 #wrapper{
@@ -97,7 +97,7 @@ input{
 input[type="checkbox"]{
     transform: scale(1.5);
     padding: 2.5%;
-    width:100%
+    width:74%
 }
 
 input[type="reset"]{
@@ -112,7 +112,7 @@ input[type="submit"]{
 }
 
 aside{
-    display:inline-block;
+    position:relative;
     text-align:center;
     margin: 2%;
     margin-bottom:1%;
@@ -122,4 +122,11 @@ aside{
 }
 img{
     width:100%;
+}
+
+video {
+    width: 100%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: #81642c;
 }
