--- a/tablet.css
+++ b/tablet.css
@@ -7,7 +7,7 @@
 */
 
 body {
-    background-color: #393939;
+    background-color: #395144;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size:large;
     padding: 0px;
@@ -43,6 +43,7 @@ footer{
 
 h1, h2, h3, h5, h6, p, li {
     margin-left: 15px;
+    margin-right: 15px;
 }
 h4{
     margin-left: 15px;
@@ -109,7 +110,7 @@ input[type="submit"]{
 }
 
 aside{
-    display:inline-block;
+    position:relative;
     text-align:center;
     margin: 12.5%;
     margin-bottom:5%;
@@ -119,4 +120,11 @@ aside{
 }
 img{
     width:100%;
+}
+
+video {
+    width: 100%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: #8B7147;
 }
