--- a/phone.css
+++ b/phone.css
@@ -1,10 +1,13 @@
 /*
 #395144 (darkest green)
 #587a5a (green)
-#81642c (brown)
+#81642c (brown) (Different shade of brown to be higher-contrast)
 #EEE9CC (white)
 #393939 (black)
 */
+
+/*For the reasons behind certain classes / div IDs, please read computer.css*/
+/*Comments in this file really only explain what changes between tablet and phone view*/
 
 body {
     background-color: #395144;
@@ -13,6 +16,11 @@ body {
     padding: 0%;
     margin: 0%;
     width: 100%;
+}
+
+article{
+    color: #393939;
+    text-align: center;
 }
 
 #wrapper{
@@ -26,10 +34,10 @@ body {
 
 header{
     background-color: #395144;
-    background: -moz-linear-gradient(top, #395144  10%, #587a5a 100%); 
+    background: -moz-linear-gradient(top, #395144  10%, #587a5a 100%); /*Different types of gradients for different browsers. This throws a warning when using the CSS checker, but this is how we were told to do it in class*/
     background: -webkit-linear-gradient(top, #395144  10%, #587a5a 100%); 
     background: -o-linear-gradient(top, #395144  10%, #587a5a 100%); 
-    background: linear-gradient(to bottom #395144  10%,#587a5a 100%);
+    background: linear-gradient(to bottom, #395144  10%,#587a5a 100%);
     color: #EEE9CC;
     padding-top: 2%;
     height:17%;
@@ -38,10 +46,10 @@ header{
 
 footer{
     background-color: #395144;
-    background: -moz-linear-gradient(bottom, #395144  10%, #587a5a 100%); 
+    background: -moz-linear-gradient(bottom, #395144  10%, #587a5a 100%); /*Different types of gradients for different browsers. This throws a warning when using the CSS checker, but this is how we were told to do it in class*/
     background: -webkit-linear-gradient(bottom, #395144  10%, #587a5a 100%); 
     background: -o-linear-gradient(bottom, #395144  10%, #587a5a 100%); 
-    background: linear-gradient(to top #395144  10%,#587a5a 100%);
+    background: linear-gradient(to top, #395144  10%,#587a5a 100%);
     color: #EEE9CC;
     padding-top: 2%;
     bottom:0;
@@ -64,7 +72,7 @@ font-size:x-large;
 text-decoration:none;
 background-color:#81642c;
 display:inline-block;
-width:85vw;
+width:85dvw; /*Nav buttons are now nearly as long as the width of the device, and stack on top of eachother instead of next to eachother. Allows for a bigger, easier to hit button*/
 text-align:center;
 padding:2%;
 margin:2%;
@@ -72,7 +80,7 @@ border-radius:15px;
 color:#EEE9CC;
 }
 
-.button:hover{
+.button:hover{ /*Truthfully, this doesn't need to exist anymore, as you cant really hover over a button on a mobile phone. I left it in for continuity*/
 box-shadow:5px 5px 3px black;
 background: radial-gradient(ellipse at center, #81642c 51%,#262113 100%);
 }
@@ -92,7 +100,7 @@ textarea{
     width:80%;
 }
 
-select{
+select{ /*Padding on input fields is increased even moreso, so that the fields are bigger and therefore easier to tap*/
     width:80%;
     padding:2.5%;
 }
@@ -134,14 +142,12 @@ img{
 }
 
 video {
-    width: 100%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    /*background-color: #8B7147; */
-    background: -moz-linear-gradient(45deg, #8B7147  0%, #4E6C50 100%); 
+    width: 96%;
+    padding: 2%;
+    background: -moz-linear-gradient(45deg, #8B7147  0%, #4E6C50 100%); /*Apply an angular linear gradient, as per requirements*/
     background: -webkit-linear-gradient(45deg, #8B7147  0%, #4E6C50 100%); 
     background: -o-linear-gradient(45deg, #8B7147  0%, #4E6C50 100%); 
-    background: linear-gradient(45deg #8B7147  0%,#4E6C50 100%);
+    background: linear-gradient(45deg, #8B7147  0%,#4E6C50 100%);
 }
 
 #welcome{
@@ -150,6 +156,7 @@ video {
     font-size:200%;
     text-align: center;
     padding-top: 5%;
+    color:#393939;
 }
 
 #photo{
